# gpu-capacity-planner

./: README.md  pyproject.toml
configs/: hardware_profiles.yaml  model_profiles.yaml  pricing_profiles.yaml  workload_profiles.yaml
docs/: NEXT_STEPS.md
examples/: enterprise_agentic.json
src/gpu_capacity_planner/: __init__.py  cli.py  config.py  forecast.py  planner.py  validation.py
tests/: test_planner.py
